# bast

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  app.json  contributing.md  diesel.toml  docker-compose.yml  makefile
.github/: dependabot.yml
.github/workflows/: aws.yml  ci.yml  dependabot.yml  release.yml  rust.yml
migrations/2019-11-15-005042_create_users/: down.sql  up.sql
migrations/2019-11-15-020559_create_websites/: down.sql  up.sql
migrations/2019-11-15-190504_create_ghosts/: up.sql
migrations/2019-11-19-184931_create_stats/: down.sql  up.sql
migrations/2019-12-09-143245_create_ghosts/: down.sql  up.sql
migrations/2020-01-02-114507_add_referrer/: down.sql  up.sql
migrations/2020-03-26-084358_bootstrap/: down.sql  up.sql
server/: main.rs
server/controllers/: auth.rs  collect.rs  file.rs  ghost.rs  health.rs  mod.rs  stats.rs  website.rs
server/models/: ghost.rs  mod.rs  pageview.rs  schema.rs  stat.rs  user.rs  website.rs
server/utils/: db.rs  mod.rs  seed.rs  token.rs  views.rs
src/: db.rs  main.rs
src/controllers/: auth.rs  collect.rs  file.rs  ghost.rs  health.rs  mod.rs  stats.rs  tracker.rs  website.rs
src/models/: ghost.rs  mod.rs  page.rs  schema.rs  user.rs  website.rs
src/utils/: error.rs  queries.rs
static/: 404.html  index.html  login.html  register.html  script.js  test.html
website/: .eslintrc.js  index.html  next.config.js  package-lock.json  package.json  script.js  tsconfig.json
website/components/Button/: index.tsx
website/components/CodeSnippet/: index.tsx
website/components/Content/: index.tsx
website/components/FormLayout/: index.tsx
website/components/GlobalStat/: index.tsx
website/components/Graph/: index.tsx
website/components/Input/: index.tsx
website/components/Link/: index.tsx
website/pages/: _app.tsx  _document.tsx  create_website.tsx  index.tsx  login.tsx  register.tsx  settings.tsx
website/utils/: api.ts  color.ts  context.ts  data.ts  messages.ts  theme.ts  types.d.ts
(+8 files in other folders)
