[package]
name = "bast"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web = { version="2.0.0", features = ["openssl"] }
actix-cors = "0.2"
diesel = { version="1.4.2", features = ["postgres", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.6"
jsonwebtoken = "6.0"
env_logger = "0.7"

[[bin]]
name = "bast"
path = "server/main.rs"
