[package]
name = "bast"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web = { version="2.0.0", features = ["openssl"] }
actix-cors = "0.2"
diesel = { version="1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
diesel_migrations = "1.4"
chrono = { version = "0.4.11", features = ["time", "serde"] }
uuid = { version = "0.8", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.6"
sha2 = "0.8.1"
hex = "0.4.2"
jsonwebtoken = "6.0"
env_logger = "0.7"

[[bin]]
name = "bast"
path = "server/main.rs"
