[package]
name = "bast"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.4"
actix-web = { version="3.2", features = ["openssl"] }
actix-cors = "0.4.1"
diesel = { version="1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
diesel_migrations = "1.4"
chrono = { version = "0.4.19", features = ["time", "serde"] }
uuid = { version = "0.8", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.9"
sha2 = "0.9.2"
hex = "0.4.2"
regex = "1.4.2"
jsonwebtoken = "7.2"
lazy_static = "1.4.0"
env_logger = "0.8"
woothee = "0.11.0"

[[bin]]
name = "bast"
path = "server/main.rs"


[profile.release]
lto = "fat"
codegen-units = 1
